# react-redux-tool-kit-todo

./: Dockerfile.react  docker-compose.yml
api/: db.sqlite3  pyproject.toml
api/api/: models.py  serializers.py  urls.py  views.py
api/api/migrations/: 0001_initial.py
api/api_tasks/: settings.py  urls.py
react-app/: .eslintcache  package.json
react-app/src/: App.module.css  App.tsx  index.tsx
react-app/src/app/: store.ts
react-app/src/features/login/: Header.module.css  Header.tsx  Login.tsx  loginSlice.ts
react-app/src/features/task/: TaskDetails.tsx  TaskInput.tsx  TaskItem.tsx  TaskList.tsx  taskSlice.ts
